# 3d-convolution-grad-cam-exercises

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
outputs/logs/metrics/: per_class_accuracy.csv  training_metrics.csv
outputs/results/: confusion_matrix.csv  metrics.txt  per_class_metrics.csv  predictions.csv
outputs/visualizations/sample_0000_010_cxi86td1_48/: metadata.txt
outputs/visualizations/sample_0001_010_cxi86td1_64/: metadata.txt
outputs/visualizations/sample_0002_010_cxi86td1_80/: metadata.txt
outputs/visualizations/sample_0003_010_cxi86td1_96/: metadata.txt
outputs/visualizations/sample_0004_010_cxi86td1_112/: metadata.txt
outputs/visualizations/sample_0005_010_cxi86td1_128/: metadata.txt
outputs/visualizations/sample_0006_010_cxi86td1_144/: metadata.txt
outputs/visualizations/sample_0007_010_cxi86td1_160/: metadata.txt
outputs/visualizations/sample_0008_010_cxi86td1_176/: metadata.txt
outputs/visualizations/sample_0009_010_cxi86td1_192/: metadata.txt
outputs/visualizations/sample_0010_010_cxi86td1_208/: metadata.txt
outputs/visualizations/sample_0011_010_cxi86td1_224/: metadata.txt
scripts/: data_analysis.py  evaluate.py  plot_training.py  quick_test.py  test_dataset.py  test_training_init.py  train.py  visualize_gradcam.py
src/config/: config.py
src/data/: dataset.py  transforms.py  utils.py
src/evaluation/: evaluator.py  metrics.py
src/models/: cnn3d.py
src/training/: losses.py  trainer.py
src/utils/: checkpointing.py  device.py  logging.py
src/visualization/: gradcam.py
(+8 files in other folders)
